added color change and highlight deletion functionalities

--- a/resources/menu.html
+++ b/resources/menu.html
@@ -20,21 +20,21 @@
 	#yellow{
 		height: 40px;
 		width: 40px;
-		background-color: yellow;
+		background-color:#fff600 ;
 		display: inline-block;
 
 	}
 	#green{
 		height: 40px;
 		width: 40px;
-		background-color: green;
+		background-color: #01ca00;
 		display: inline-block;
 
 	}
 	#red{
 		height: 40px;
 		width: 40px;
-		background-color: red;
+		background-color: #e00200;
 		display: inline-block;
 
 	}
@@ -42,9 +42,9 @@
   </head>
   <body>
 	  <div id="color-selector">
-		<div id="yellow"></div>
-		<div id="red"></div>
-		<div id="green"></div>
+		<div id="yellow" data-clr="#fff600"></div>
+		<div id="red" data-clr="#e00200"></div>
+		<div id="green" data-clr="#01ca00"></div>
 	  </div>
 
   </body>
