--- a/resources/menu.html
+++ b/resources/menu.html
@@ -16,40 +16,52 @@
 		border-radius : 10px;	
 		margin: 0 auto;
 	}
+	#notes-container {
+		width :140px;
+		height: 100px;
+		display: none;
+	}
+	#note{
+		width: 90%;
+		align: center;
+		height: 90%;
+	}
 	#color-selector{
 		margin: 0 auto;
 		height: 40px;
-		width: 150px;
+		width: 100%;
 
+		align: center;
 	}
 	#yellow{
-		height: 30px;
-		width: 30px;
+		height: 25px;
+		width: 25px;
 		background-color:#fff600 ;
 		display: inline-block;
 
 	}
 	
 	#green{
-		height: 30px;
-		width: 30px;
+		height: 25px;
+		width: 25px;
 		background-color: #01ca00;
 		display: inline-block;
 
 	}
 	#red{
-		height: 30px;
-		width: 30px;
+		height: 25px;
+		width: 25px;
 		background-color: #e00200;
 		display: inline-block;
 
 	}
 	#blue{
-		height: 30px;
-		width: 30px;
+		height: 25px;
+		width: 25px;
 		background-color:#00ffff ;
 		display: inline-block;
 	}
+	
 
 
     </style>
@@ -60,6 +72,10 @@
 		<div id="red" data-clr="#e00200"></div>
 		<div id="green" data-clr="#01ca00"></div>
 		<div id="blue" data-clr="#00ffff"></div>
+	  </div>
+	  <div id = "notes-container">
+		  <textarea id="note">
+		  </textarea>
 	  </div>
 
   </body>
