polished topic selection interface

--- a/resources/menu.html
+++ b/resources/menu.html
@@ -7,25 +7,25 @@
    	<link rel="stylesheet" type="text/css" href="menu.css"/> 
   </head>
   <body>
-		<div class="topic-view hidden">
-			<div id="topic-selector topic-view hidden">
-				<button class="exit-topic-view topic-view hidden"> back </button>
-				<button class="topic topic-view hidden"> name </button>
-				<button class="topic topic-view hidden"> name </button>
-				<button class="topic topic-view hidden"> name </button>
-				<button class="topic topic-view hidden"> name </button>
-				<button class="topic topic-view hidden"> name </button>
-				<button class="topic topic-view hidden"> name </button>
-				<button class="topic topic-view hidden"> name </button>
-				<button class="topic topic-view hidden"> name </button>
-				<button class="topic topic-view hidden"> name </button>
-				<button class="topic topic-view hidden"> name </button>
-				<button class="topic topic-view hidden"> name </button>
+		<div class="topic-view topic-view-container hidden-view">
+			<div class="topic-selector topic-view hidden-view">
+				<button class="exit-topic-view topic-view hidden-view"> Cancel </button>
+				<button class="topic topic-view hidden-view"> name 1 </button>
+				<button class="topic topic-view hidden-view"> name 3 </button>
+				<button class="topic topic-view hidden-view"> name 5</button>
+				<button class="topic topic-view hidden-view"> name 25</button>
+				<button class="topic topic-view hidden-view"> name 53253</button>
+				<button class="topic topic-view hidden-view"> name23123 </button>
+				<button class="topic topic-view hidden-view"> name 5</button>
+				<button class="topic topic-view hidden-view"> name </button>
+				<button class="topic topic-view hidden-view"> name </button>
+				<button class="topic topic-view hidden-view"> name </button>
+				<button class="topic topic-view hidden-view"> name </button>
 			</div>
 		</div>
 		
 
-		<div class="default-view">
+		<div class="default-view default-view-container">
 				<div id="color-selector" class="default-view">
 						<div class="default-view" id="yellow" data-clr="#fff600"></div>
 
@@ -34,8 +34,8 @@
 						<div  class="default-view" id="blue" data-clr="#00ffff"></div>
 				</div>
 				
-				<div id = "notes-container" class="default-view">
-					<textarea id="note" class="default-view">
+			<div id = "notes-container" class="default-view hidden">
+					<textarea id="note" class="default-view hidden">
 					</textarea>
 				</div>
 				<button class="selectTopic default-view">Topic</button>
