functional dropdown topic selection in sidebar

--- a/sidebar/viewer.html
+++ b/sidebar/viewer.html
@@ -6,6 +6,7 @@
 	</head>
 
 	<body>
+		<div class="header">
 		 <div class="dropdown">
 		  <button class="dropbtn">Topic</button>
 		  <div class="dropdown-content">
@@ -14,6 +15,7 @@
 		    <a href="#">Link 3</a>
 		  </div>
 		</div>
+		<div>
 		<div>
 		<div id="entries-container">
 		 
