--- a/resources/menu.html
+++ b/resources/menu.html
@@ -9,7 +9,6 @@
   <body>
 		<div class="topic-view topic-view-container hidden-view">
 			<div class="topic-selector topic-view hidden-view">
-				<button class="exit-topic-view topic-view hidden-view"> Cancel </button>
 			</div>
 		</div>
 		
@@ -27,7 +26,7 @@
 					<textarea id="note" class="default-view hidden">
 					</textarea>
 				</div>
-				<button class="selectTopic default-view">Topic</button>
+				<a class="selectTopic default-view"></a>
        
 		</div>
   </body>
