added color filter and sort order options to sidebar viewer

--- a/sidebar/viewer.html
+++ b/sidebar/viewer.html
@@ -13,12 +13,29 @@
 				</div>
 			</div>
 			<div class="topic-options">
-				<img id="topic-option-remove" class="topic-option" src="../icons/topic-delete.svg" title="Remove Topic">
-				<!--				<img id="topic-option-edit" class="topic-option"src="../icons/topic-edit.svg" title="Edit Topic">i -->
+				<img id="topic-option-remove" class="topic-option" src="../resources/icons/topic-delete.svg" title="Remove Topic">
+				<!--				<img id="topic-option-edit" class="topic-option"src="../resources/icons/topic-edit.svg" title="Edit Topic">i -->
+			</div>
+			<div class="filters">
+				<div class="color-dropdown-container">
+					<div class="color-filter-container">
+							<div class="selected-color highlight-color"></div>
+							<img class="menu-arrow" src="../resources/icons/chevron-bottom.svg">
+					</div>
+					<div id="color-filter-menu" class="dropdown-content">
+						<div class="highlight-color dropdown-item" style="background-color:white">
+						</div>
+						
+					</div>
+				</div>
+				<div class="display-order">
+					<img src="../resources/icons/sort-ascending.svg">
+				</div>
+				<div id="hl-count">0 highlights</div>
+				
 			</div>
 
 		</div>
-			
 		<div id="entries-container">
 		</div>
 
